--- a/assets/styles/style-contact.css
+++ b/assets/styles/style-contact.css
@@ -1,7 +1,17 @@
-* {
-    margin-left: 3px;
-}
-
 .contact-us {
     margin-left: 10px;
+    flex: 1 0 auto;
+}
+
+footer {
+    flex-shrink: 0;
+}
+
+html, body {
+    height: 100%;
+}
+
+body {
+    display: flex;
+    flex-direction: column;
 }
