--- a/assets/styles/style-contact.css
+++ b/assets/styles/style-contact.css
@@ -15,3 +15,8 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+.site-header.inicio {
+    height: 14vh !important;/*tamaño de la imagen y el vh es para que se adecue para cualquier pantalla*/
+    min-height: 14rem !important;/*minimo de pixeles 60=600px*/
+  }
