--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,13 +1,14 @@
 html{
-  box-sizing: border-box;/**siempre va**/
-  font-size: 62.5%; /*reset para rems- 62.5%=10px de 16px*/
+  box-sizing: border-box;
+  font-size: 62.5%; 
 }
-*, *::before, *::after{/**siempre va**/
+*, *::before, *::after{
   box-sizing: inherit;
 }
+
 /*fuentes*/
 body{
-  font-family: 'Lato', sans-serif;/*sacada de google fonts son gratis*/
+  font-family: 'Lato', sans-serif;
   font-size: 1.6rem;
   line-height: 2;
 
@@ -15,14 +16,13 @@ body{
 
 /**GLobales**/
 
-img{/** modifica todas las imgenes para que se pongan
-       coreectamente a su contenedor**/
+img{
   max-width: 100%;
 }
 .contenedor{
-  max-width: 120rem;/*maximo de pixeles 120 =1200px*/
+  max-width: 120rem;
   margin-left: auto;
-  margin-right: auto; /*margenes para centrar*/
+  margin-right: auto;
   width: 90%;
 }
 h1{
@@ -40,39 +40,32 @@ h4{
 
 /** Utilidades **/
 
-.seccion{ /*separaciones globales*/
+.seccion{ 
   margin-top: 2rem;
   margin-bottom: 2rem;
 
 }
-.fw-300{ /*claridad o mas oscura la letra*/
+.fw-300{ 
   font-weight: 300;
 }
 .centrar-texto{
   text-align: center;
 }
 .d-block{
-  display: block!important;/**toma todo el tamaño
-                              el impportant le da prioridad en el caso
-                              de que estuviera otro display mas abajo**/
+  display: block!important;
 }
 
-/**Botones**/
 .boton{
-  color: white;/**de letras**/
+  color: white;
   font-weight: 700;
   text-decoration: none;
   font-size: 1.8rem;
-  padding: 1rem 3rem;/** **/
+  padding: 1rem 3rem;
   margin-top:3rem;
-  display: inline-block;/**imagenes y botones que me lleven a link
-                        tengo que cambiarle el display sino no puedo aplicar margin
-                        ni padding**/
-
+  display: inline-block;
   text-align: center;
-
-
 }
+
 .boton-amarillo{
   background-color: #E08709;
 
@@ -82,15 +75,15 @@ h4{
 }
 
 /*header*/
-.site-header.inicio{/*como aqui le quiero dar lo mismo a mis dos clases lo hago asi*/
+.site-header.inicio{
   background: url(../images/header.jpg);
-  background-position: center center; /*posicion de la imagen*/
+  background-position: center center; 
   background-size: cover;
-  height: 100vh;/*tamaño de la imagen y el vh es para que se adecue para cualquier pantalla*/
-  min-height: 60rem;/*minimo de pixeles 60=600px*/
+  height: 100vh;
+  min-height: 60rem;
 }
 
-.contenido-header{/*diseño entre barra y venta de casas y dep...*/
+.contenido-header{
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -100,76 +93,67 @@ h4{
 
 .contenido-header h1{
   color:white;
-  padding-top: 2rem;/*separacion hacia adentro*/
-  max-width: 60rem; /*no pasa de la cantidad y crea nueva linea*/
-  line-height: 5rem;/*interlineado*/
+  padding-top: 2rem;
+  max-width: 60rem; 
+  line-height: 5rem;
 }
 
 .barra{
-  display: flex; /*habilito flex paravcolocar el logotipo lado izquierod y los link lados derecho*/
-
-  justify-content: space-between;/*posicion del flex*/
-  align-items: center; /*se alinea lo que separamos*/
-  padding-top: 3rem; /*espacio hacia dento del elemento*/
+  display: flex; 
+  justify-content: space-between;
+  align-items: center; 
+  padding-top: 3rem;
 
 }
 
 /**Navegacion**/
 .navegacion a{
   color: white;
-  text-decoration: none;/*elimina el subrayado*/
-  font-size: 1.8rem;/*tamaño fuente 1.8 a 18*/
+  text-decoration: none;
+  font-size: 1.8rem;
   margin-right: 2rem;
 }
 
 .navegacion a:hover{
-  color: #71B100;/*color cuando pase por el boton*/
+  color: #71B100;
 }
 .navegacion a:last-of-type{
-  margin: 0; /*para que ul ultimo no tenga espacio a la derecha*/
+  margin: 0;
 }
 
 
 /*iconos nosotros*/
 
-
 .iconos-nosotros{
   display: flex;
-  justify-content: space-between;/*separacion*/
-
-
+  justify-content: space-between;
 }
 .icono{
   flex-basis: calc(33.3% - 1rem);
-  text-align: center;/*alineacion*/
+  text-align: center;
 }
 .icono h3{
-  text-transform:uppercase;/*modifica a mayusculas*/
+  text-transform:uppercase;
 }
-
 
 /** anuncios**/
 .contenedor-anuncios{
   display:flex;
-  justify-content: space-between;/*separacion*/
+  justify-content: space-between;
   width: 98%;
   flex-wrap: wrap;
-
 }
 
 .anuncio{
   flex-basis:calc(33.3% - 1rem);
-  border-style: solid; /**hay mas tipos (double..etc)**/
+  border-style: solid;
   border-color: #B5B5B5;
   border-width: 1px;
-  /**tambien puedo poner asi
-  border: 1px solid #B5B5B5; **/
-
-  background: #F5F5F5;/**color de fondo**/
+  background: #F5F5F5;
 }
 
 .contenido-anuncio{
-  padding: 2rem;/**centrado de 2 rem**/
+  padding: 2rem;
 }
 
 .contenido-anuncio h3, .contenido-anuncio p{
@@ -177,10 +161,9 @@ h4{
 
 }
 
-
 .precio{
   color: #71B100;
-  font-weight: 700; /**negrita**/
+  font-weight: 700; 
 }
 
 .iconos-caracteristicas{
@@ -191,7 +174,6 @@ h4{
 
 }
 .iconos-caracteristicas li{
-  /**flex: 1;**/
   display: flex;
 
 }
@@ -207,7 +189,6 @@ h4{
 
 }
 
-
 /**COnntacto home**/
 .imagen-contacto {
   background-image: url(../images/encuentra.jpg);
@@ -220,23 +201,19 @@ h4{
 }
 
 .contenido-contacto{
-  flex: 1;/**factor de crecimiento
-           divide la cantidad de pixeles con la cantidad de elemenetos que tenemos**/
-  color: white;/****/
-
+  flex: 1;
+  color: white;
 }
 .contenido-contacto p{
   font-size: 1.8rem;
 
 }
 
-
 /**seccion inferior**/
 .seccion-inferior{
-  display: flex; /**se colocan una seccion al lado de la otra**/
+  display: flex; 
   justify-content:space-between;
 }
-
 
 .seccion-inferior .blog{
   flex-basis: 60%;
@@ -245,11 +222,10 @@ h4{
   flex-basis: calc(40% - 2rem);
 }
 
-
 .entrada-blog{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 2rem;/**separacion con el siguiente elmento**/
+  margin-bottom: 2rem;
 
 }
 
@@ -276,7 +252,7 @@ h4{
 
 }
 
-.texto-entrada h4::after{/**crea un elemento despues del elemento**/
+.texto-entrada h4::after{
   content: '';
   display: block;
   width: 15rem;
@@ -289,7 +265,6 @@ h4{
 .texto-entrada span{
   color: #E08709;
 }
-
 
 /**testimoniales**/
 .testimonial{
@@ -305,7 +280,7 @@ h4{
 
 }
 
-.testimonial blockquote::before{/**crea elemento antes**/
+.testimonial blockquote::before{
 
   content:'';
   background-image: url(../images/comilla.svg);
@@ -316,7 +291,7 @@ h4{
 
 }
 
-.testimonial blockquote{/**en el padre va el relativo y en el hijo el absouto**/
+.testimonial blockquote{
   position: relative;
   padding-left: 5rem;
   font-weight: 300;
