--- a/assets/styles/style-contact.css
+++ b/assets/styles/style-contact.css
@@ -1,12 +1,3 @@
-.contact-us {
-    margin-left: 10px;
-    flex: 1 0 auto;
-}
-
-footer {
-    flex-shrink: 0;
-}
-
 html, body {
     height: 100%;
 }
@@ -19,4 +10,18 @@ body {
 .site-header.inicio {
     height: 14vh !important;/*tamaño de la imagen y el vh es para que se adecue para cualquier pantalla*/
     min-height: 14rem !important;/*minimo de pixeles 60=600px*/
-  }
+}
+
+.container {
+    margin-left: 10px;
+    flex: 1 0 auto;
+    color: #305896;
+}
+
+.contact-us {
+    margin-left: 10px;
+}
+
+footer {
+    flex-shrink: 0;
+}
