--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -335,6 +335,7 @@ h4 {
 .contenedor-footer {
   padding: 3rem 0;
   text-align: center;
+  float: left;
 }
 @media (min-width: 768px) {
   .contenedor-footer {
