--- a/assets/styles/style-blog.css
+++ b/assets/styles/style-blog.css
@@ -76,21 +76,6 @@ h2{
     transform: scale(1.2);
     transition: all 300ms;
 }
-.contact-us {
-    margin-left: 10px;
-    flex: 1 0 auto;
-}
-
-footer {
-   background: black;
-    height: 70px;
-    border-top: 2px solid rgba(0, 0, 0, 0.24);  
-    /*  poner footer abajo */
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
-}
 
 html, body {
     height: 100%;
@@ -101,6 +86,13 @@ body {
     flex-direction: column;
 }
 
+main {
+    flex: 1 0 auto;
+}
+
+footer {
+    flex-shrink: 0;
+}
 
 @keyframes rotar{
     from{
